added and changed h2, id o/p and ...

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <div class="container">
-        <h1>Practice Arrays in JavaScript</h1>
-        <p>Enter numbers to add to the arry:</p>
+        <h1>Array Operations</h1>
+        <p>Enter numbers to add to the array:</p>
 
 
         <!--input and buttons-->
@@ -25,9 +25,11 @@
         </div>
 
         <!--o/p display-->
-        <div class="output-area">
-            <h3>Array content</h3>
-            <p id="output"></p>
+        <div id="output">
+            <h2>Array content:</h2>
+            <p id="arrayContent">Array: []</p> <!--displays array-->
+            <h2>Results:</h2>
+            <p id="results">No results yet</p><!--displays results like sum-->
 
         </div>
     </div>
