added o/p area and change wrong spelling to correct.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <!--o/p display-->
-        <div id="output">
+        <div id="output-area">
             <h2>Array content:</h2>
             <p id="arrayContent">Array: []</p> <!--displays array-->
             <h2>Results:</h2>
